more resizing images

--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -89,7 +89,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/landscape.jpg" alt="Image" class="img-fluid tm-img" >
+                                            <img src="img/landscape.jpg" alt="Image" class="img-fluid tm-img" style="height:300px" >
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Forest <span>Landscape</span></h2>
                                                 <p class="tm-figure-description">Virtual landscape in a meditative forest, through the immersive environment, the miniture temple suggests the practice of zen in a calm land. My concept with the temple is to draw a connection to mindfulness and peace from our inner spirit while using zen practices. </p>
@@ -99,7 +99,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/objects.jpg" alt="Image" class="img-fluid tm-img" style="width:346px;height:344px">
+                                            <img src="img/objects.jpg" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Vuforia<span>AR</span></h2>
                                                 <p class="tm-figure-description">Seeing an artifacts through AR reality brings to the point of exposing the reality of the artifacts. Creates a narrative yet nostalgic memories of ancient times in a person's lifetime and culture.</p>
@@ -109,7 +109,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/hills.jpg" alt="Image" class="img-fluid tm-img" style="width:345px;height:344px">
+                                            <img src="img/hills.jpg" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Forest<span>Benches</span></h2>
                                                 <p class="tm-figure-description">The trail and path represents the navigation process of a calming mind, relaxation techniques can be used in this scene which people can practice mindfulness.</p>
@@ -119,7 +119,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/overview.jpg" alt="Image" class="img-fluid tm-img" style="width:346px;height:344px">
+                                            <img src="img/overview.jpg" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Lake <span>View</span></h2>
                                                 <p class="tm-figure-description">Standing up on the hill oversees the entire lake and rivers from the view above. High above the hills, the view that sees the lake's horizon and the sun.</p>
@@ -129,7 +129,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>  
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/boardGame.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/boardGame.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Gaming <span>Prototype</span></h2>
                                                 <p class="tm-figure-description">Our team project is to prototype a game. The major concept of the game is to reach to the finish line while encountering different events, this drawn to the inspiration of magical and sci-fi adventure games.</p>
@@ -139,7 +139,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/layout.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/layout.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Regional <span>Drafting</span></h2>
                                                 <p class="tm-figure-description">Before doing prototype a game, it is highly critical to draft a region that divides up a game section. In the regions, me and my partner decides which piece of land goes to a typical location on the graph paper. Our concept is to formulate a layout that is suitable for prototyping and playing a game.</p>
@@ -149,7 +149,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/simulations.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/simulations.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Boardgame <span>Simulation</span></h2>
                                                 <p class="tm-figure-description">Simulating a board game. Our group project is doing a simulation on the topic that we designed on a board game.</p>
@@ -159,7 +159,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/compGame.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/compGame.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">First <span>Playable Prototype</span></h2>
                                                 <p class="tm-figure-description">Our group first designed and programmed a playable game for a draft. It functioned that we wanted in a way that it can be able to keep track the score. However, it still lacks of refinement of the player receives damage from the object.</p>
@@ -169,7 +169,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>   
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/hillGreens.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/hillGreens.jpg" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Virtual Forest<span>Grasslands</span></h2>
                                                 <p class="tm-figure-description">A perspective that shows a grass and hilly areas. Different perspective captures the wonders of the virtual meditative landscape.</p>
@@ -179,7 +179,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/streamline.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/streamline.jpg" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Riverbank <span></span></h2>
                                                 <p class="tm-figure-description">Near the river bank, the image captures the imagery yet lively of the beauty of the natural environment.</p>
@@ -189,7 +189,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/project.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/project.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">MAX-MSP <span>Development</span></h2>
                                                 <p class="tm-figure-description">Musical visual development through a collaborative project with music students. Our group concept is to make a musical visual that interfaces with MIDI device which generates or produces abstract quality of aesthetics.</p>
@@ -199,7 +199,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/group project.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/group project.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Process <span> MAX-MSP</span></h2>
                                                 <p class="tm-figure-description">Group project for MAX-MSP in development for final collaboration project, using the interactive software to craft an abstract design while interfacing the MIDI device.</p>
@@ -209,7 +209,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/pic.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/pic.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Thirteen</span></h2>
                                                 <p class="tm-figure-description">Group project development.</p>
@@ -219,7 +219,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/development.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/development.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Fourteen</span></h2>
                                                 <p class="tm-figure-description">Visual programming development.</p>
@@ -229,7 +229,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/visuals.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/visuals.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Fifteen</span></h2>
                                                 <p class="tm-figure-description">Visual projection on screen.</p>
@@ -239,7 +239,7 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/closeup.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/closeup.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Sixteen</span></h2>
                                                 <p class="tm-figure-description">Basic brush bot with minoture battery.</p>
