--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -211,8 +211,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/pic.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Thirteen</span></h2>
-                                                <p class="tm-figure-description">Group project development.</p>
+                                                <h2 class="tm-figure-title">Testing <span>MAX-MSP</span></h2>
+                                                <p class="tm-figure-description"> During our in progress work, my group callibrated the MAX-MSP software to check whether if it is possible to program and make more visuals. Our major concept is to make a six-sided cube and entire group's visual goes on each side of the cube.</p>
                                                 <a href="img/pic.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -221,7 +221,7 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/development.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Fourteen</span></h2>
+                                                <h2 class="tm-figure-title">Visual Programming<span>Development</span></h2>
                                                 <p class="tm-figure-description">Visual programming development.</p>
                                                 <a href="img/development.JPG">View more</a>
                                             </figcaption>
@@ -231,8 +231,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/visuals.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Fifteen</span></h2>
-                                                <p class="tm-figure-description">Visual projection on screen.</p>
+                                                <h2 class="tm-figure-title"> Visuals<span>Prep</span></h2>
+                                                <p class="tm-figure-description">Visual projection on screen, as the technical runthrough of the desired visual that we present as a whole class.</p>
                                                 <a href="img/visuals.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -241,8 +241,8 @@ http://www.tooplate.com/view/2086-multi-color
                                         <figure class="effect-bubba">
                                             <img src="img/closeup.JPG" alt="Image" class="img-fluid tm-img" style="height:300px">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Sixteen</span></h2>
-                                                <p class="tm-figure-description">Basic brush bot with minoture battery.</p>
+                                                <h2 class="tm-figure-title">Brushbot Picture <span>Documentation</span></h2>
+                                                <p class="tm-figure-description">Basic brush bot with minoture battery, class project as a warm-up to the concept of Arduinos and battery.</p>
                                                 <a href="img/closeup.JPG">View more</a>
                                             </figcaption>           
                                         </figure>
