--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -469,7 +469,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                             <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img"> -->
 
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
+                                                <!-- <h2 class="tm-figure-title">Picture <span>Seven</span></h2> -->
                                                 <iframe width="265" height="226" src="https://www.youtube.com/embed/8JDJEZ-znyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                <!--  <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
                                                 <a href="img/3D printer.mov">View more</a> -->
@@ -480,7 +480,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                         <!-- <figure class="effect-bubba">
                                             <img src="img/tm-img-14-tn.jpg" alt="Image" class="img-fluid tm-img"> -->
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Eight</span></h2>
+                                                <!-- <h2 class="tm-figure-title">Picture <span>Eight</span></h2> -->
                                                 <iframe width="260" height="225" src="https://www.youtube.com/embed/stMVDTA3CJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                 <!-- <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p> -->
                                                 <!-- <a href="img/tm-img-14.jpg">View more</a> -->
@@ -619,7 +619,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/revised.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/revised.jpg" alt="Image" class="img-fluid tm-img" style="height:300px">
 
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
