--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -711,7 +711,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/vuforiaHuman.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/vuforiaHuman.jpg" alt="Image" class="img-fluid tm-img" style="height:340px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>One</span></h2>
                                                 <p class="tm-figure-description">AR human body on iPhone.</p>
@@ -721,7 +721,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/facial.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/facial.jpg" alt="Image" class="img-fluid tm-img" style="height:340px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Two</span></h2>
                                                 <p class="tm-figure-description">Photograph double exposure 01.</p>
@@ -731,7 +731,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/exposure.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/exposure.jpg" alt="Image" class="img-fluid tm-img" style="height:340px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Three</span></h2>
                                                 <p class="tm-figure-description">Double exposure 02.</p>
@@ -741,7 +741,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/flowers.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/flowers.jpg" alt="Image" class="img-fluid tm-img" style="height:340px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Four</span></h2>
                                                 <p class="tm-figure-description">3D Modeling</p>
@@ -751,7 +751,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/sketch.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/sketch.JPG" alt="Image" class="img-fluid tm-img" style="height:340px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Five</span></h2>
                                                 <p class="tm-figure-description">Rough draft and ideation.</p>
@@ -761,7 +761,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/neopixel matrix.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/neopixel matrix.JPG" alt="Image" class="img-fluid tm-img" style="height:340px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Six</span></h2>
                                                 <p class="tm-figure-description">Material in progress.</p>
@@ -771,7 +771,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/humanModel.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/humanModel.jpg" alt="Image" class="img-fluid tm-img" style="height:340px">
 
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
@@ -783,7 +783,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/ideation.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/ideation.JPG" alt="Image" class="img-fluid tm-img" style="height:340px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Eight</span></h2>
                                                 <!-- <iframe width="260" height="225" src="https://www.youtube.com/embed/stMVDTA3CJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
@@ -794,7 +794,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/vuforiaAR.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/vuforiaAR.jpg" alt="Image" class="img-fluid tm-img" style="height:340px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Nine</span></h2>
                                                 <!-- <iframe width="260" height="225" src="https://www.youtube.com/embed/stMVDTA3CJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
