--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -559,7 +559,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/person.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/person.JPG" alt="Image" class="img-fluid tm-img" style="height:330px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>One</span></h2>
                                                 <p class="tm-figure-description">Interior design model.</p>
@@ -569,7 +569,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/angledView.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/angledView.JPG" alt="Image" class="img-fluid tm-img" style="height:330px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Two</span></h2>
                                                 <p class="tm-figure-description">Differnet angled view.</p>
@@ -579,7 +579,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/room.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/room.JPG" alt="Image" class="img-fluid tm-img" style="height:330px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Three</span></h2>
                                                 <p class="tm-figure-description">Room view</p>
@@ -589,7 +589,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/wooden.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/wooden.JPG" alt="Image" class="img-fluid tm-img" style="height:330px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Four</span></h2>
                                                 <p class="tm-figure-description">Singages</p>
@@ -599,7 +599,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/blocks.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/blocks.JPG" alt="Image" class="img-fluid tm-img" style="height:330px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Five</span></h2>
                                                 <p class="tm-figure-description">Items for VR essay in progres.</p>
@@ -609,7 +609,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/floatingBlock.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/floatingBlock.JPG" alt="Image" class="img-fluid tm-img" style="height:330px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Six</span></h2>
                                                 <p class="tm-figure-description">Getting ready to deploy.</p>
@@ -619,7 +619,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/revised.jpg" alt="Image" class="img-fluid tm-img" style="height:300px">
+                                            <img src="img/revised.jpg" alt="Image" class="img-fluid tm-img" style="height:330px">
 
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
@@ -631,7 +631,7 @@ s                                            <img src="img/testing neoPixels.JPG
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/ribbons.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/ribbons.JPG" alt="Image" class="img-fluid tm-img" style="height:330px">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>Eight</span></h2>
                                                 <!-- <iframe width="260" height="225" src="https://www.youtube.com/embed/stMVDTA3CJw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
