--- a/ImagePage/index.html
+++ b/ImagePage/index.html
@@ -181,9 +181,29 @@
 							<p>A capture through people playing with VR.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/water h20.jpg" class="image"><img src="images/thumbs/water h20.jpg" alt="" /></a>
+							<a href="images/fulls/droplet.jpg" class="image"><img src="images/thumbs/droplet.jpg" alt="" /></a>
 							<h2>Waterfall</h2>
 							<p>Animated stills of a water pouring.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/museum.jpeg" class="image"><img src="images/thumbs/museum.jpeg" alt="" /></a>
+							<h2>Museum</h2>
+							<p>Standing in front of a painting.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/speed.jpeg" class="image"><img src="images/thumbs/speed.jpeg" alt="" /></a>
+							<h2>Traveling</h2>
+							<p>The movement of traveling speed.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/cup.jpeg" class="image"><img src="images/thumbs/cup.jpeg" alt="" /></a>
+							<h2>Leisure</h2>
+							<p>Image of cup of coffee.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/park.jpeg" class="image"><img src="images/thumbs/park.jpeg" alt="" /></a>
+							<h2>SJ Park</h2>
+							<p>The park near the campus late afternoon.</p>
 						</article>
 
 
